deployment/networking/http/storage/express-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: express-virtualservice
spec:
  hosts:
  - "mongo.oss"
  gateways:
  - dashboards-gateway-1
  http:
  - route:
    - destination:
        host: express-service.storage.svc.cluster.local
        port:
          number: 7200
