deployment/networking/http/storage/qdrant-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: qdrant-virtualservice
spec:
  hosts:
  - "qdrant.oss"
  gateways:
  - dashboards-gateway-1
  http:
  - route:
    - destination:
        host: qdrant-service.storage.svc.cluster.local
        port:
          number: 7201
